--- a/views/commentaire.pug
+++ b/views/commentaire.pug
@@ -3,7 +3,7 @@ form(method="POST")
   article  
         h1 #{article.pseudo}
         h4 #{article.title}
-        p #{article.content}
+        p #{article.Tweet}
         label(for="reponse") Réponse:
         br
         textarea(id="reponse", name="reponse", placeholder="")
